// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collects coverage only from specified files 1`] = `
----------|----------|----------|----------|----------|----------------|
File      |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
----------|----------|----------|----------|----------|----------------|
All files |      100 |      100 |      100 |      100 |                |
 setup.js |      100 |      100 |      100 |      100 |                |
----------|----------|----------|----------|----------|----------------|

`;

exports[`collects coverage only from specified files avoiding dependencies 1`] = `
----------|----------|----------|----------|----------|----------------|
File      |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
----------|----------|----------|----------|----------|----------------|
All files |    85.71 |      100 |       50 |    85.71 |                |
 sum.js   |    85.71 |      100 |       50 |    85.71 |             13 |
----------|----------|----------|----------|----------|----------------|

`;

exports[`json reporter printing with --coverage 1`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.

`;

exports[`outputs coverage report 1`] = `
-------------------------------|----------|----------|----------|----------|----------------|
File                           |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
-------------------------------|----------|----------|----------|----------|----------------|
All files                      |    41.18 |        0 |       25 |    41.18 |                |
 not-required-in-test-suite.js |        0 |        0 |        0 |        0 |  9,16,17,18,20 |
 other-file.js                 |      100 |      100 |      100 |      100 |                |
 sum.js                        |    85.71 |      100 |       50 |    85.71 |             13 |
 sum_dependency.js             |        0 |        0 |        0 |        0 |     9,11,12,15 |
-------------------------------|----------|----------|----------|----------|----------------|

`;
